# hbcl

./: .gitignore  .travis.yml  Makefile  README.md  build.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: github_artifact.yml  main.yml
heybrochecklog/: __init__.py  __main__.py  analyze.py  logfile.py  shared.py  translate.py
heybrochecklog/markup/: __init__.py  matches.py
heybrochecklog/resources/: __init__.py  drives.db  xld.json
heybrochecklog/resources/eac/: bulgarian.json  chinese (simplified).json  czech.json  dutch.json  english.json  french.json  german.json  italian.json  polish.json  russian.json  serbian.json  slovak.json  spanish.json  swedish.json  uzbek.json
heybrochecklog/resources/eac95/: chinese (simplified).json  chinese (traditional).json  croatian.json  czech.json  danish.json  dutch.json  english.json  french.json  german.json  hungarian.json  italian.json  japanese.json  korean.json  norwegian.json  portuguese-br.json  portuguese.json  russian.json  serbian.json  slovak.json  spanish.json  swedish.json  taiwan.json  ukrainian.json  uzbek.json
heybrochecklog/score/: __init__.py  eac.py  eac95.py  integrity.py  logchecker.py  xld.py  xld_integrity.py
heybrochecklog/score/modules/: combined.py  drives.py  parsers.py  validation.py
scripts/: accuraterip_offsets.py  generate_marked_up_test_log.py
scripts/eac95_builder/: constants.py  generators.py  to_json.py
scripts/eac_builder/: constants.py  generators.py  to_json.py
tests/: eac95_test.py  eac_test.py  translate_test.py  unrecognized_test.py  xld_test.py
tests/logs/EAC/markup/: 1.3-good.log.markup  abort.log.markup  bad-htoa.log.markup  bad-russian-099.log.markup  badcombo.log.markup  burst.log.markup  data-track.log.markup  eac-99-good.log.markup  (+11 more)
(+14 files in other folders)
