[tool.poetry]
name = "heybrochecklog"
version = "1.4.0"
description = "A python tool for evaluating and working with EAC/XLD rip logs."
authors = ["lights <lights@tutanota.de>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ligh7s/hey-bro-check-log"
keywords = ["logchecker", "eac", "xld"]
include = [
    "heybrochecklog/resources/*",
    "heybrochecklog/resources/eac/*",
    "heybrochecklog/resources/eac95/*",
]

[tool.poetry.scripts]
heybrochecklog = 'heybrochecklog.__main__:runner'

[tool.poetry.dependencies]
python = "^3.7"
cchardet = "^2.1.7"
chardet = "^5.1.0"
pprp = "^0.2.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.black]
line-length = 88
target-version = ['py37']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
